# word-puzzler

./: Cargo.toml  README.md
src/: dictionary.rs  main.rs  probability.rs
