[package]
name = "letter-permutations"
version = "0.1.0"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
env_logger = "0.8.2"
fst = "0.4.5"
itertools = "0.10.0"
log = "0.4.13"
memmap2 = "0.2.0"
once_cell = "1.5.2"
ordered-float = "2.0.1"
regex = "1.4.3"
regex-automata = { version = "0.1.9", features = ["transducer"] }
structopt = "0.3.21"
